<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:scrollbarSize="0dp"
    android:scrollbarStyle="outsideInset"
    tools:context=".ArtDescriptionDisplayActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/artImageContainer"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:elevation="10dp"
        app:cardCornerRadius="35dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/artImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@drawable/joconde" />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/descrtiptionContainerScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbarSize="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artImageContainer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/descrtiptionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:paddingBottom="10dp"
            android:paddingTop="7dp"
            >

            <TextView
                android:id="@+id/artName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="start"
                android:textColor="#000000"
                android:textSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/descrtiptionContainer"
                tools:text="Art Name" />

            <TextView
                android:id="@+id/artistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins"
                android:textColor="#000000"
                android:textSize="21dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/artName"
                tools:text="Artist Name" />

            <TextView
                android:id="@+id/artYear"
                android:layout_width="0dp"
                android:layout_height="31dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_extralight"
                android:textColor="#000000"
                android:textSize="19dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/artistName"
                tools:text="Year" />

            <TextView
                android:id="@+id/artScore"
                android:layout_width="102dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_extrabold"
                android:textAlignment="viewEnd"
                android:textColor="#F27329"
                android:textSize="24dp"
                app:layout_constraintEnd_toStartOf="@id/rarity"
                app:layout_constraintTop_toBottomOf="@id/artName"
                tools:text="Score" />

            <TextView
                android:id="@+id/artSummary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/poppins"
                android:justificationMode="inter_word"
                android:textColor="#000000"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/artYear"
                tools:text="Art Summary" />

            <ImageView
                android:id="@+id/rarity"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/artName"
                app:srcCompat="@drawable/rare" />

            <ImageView
                android:id="@+id/countryBadge"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/artSummary"
                app:srcCompat="@drawable/france" />

            <ImageView
                android:id="@+id/cityBadge"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/artSummary"
                app:srcCompat="@drawable/paris" />

            <ImageView
                android:id="@+id/museumBadge"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/artSummary"
                app:srcCompat="@drawable/louvre" />

            <TextView
                android:id="@+id/countryName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="France"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_light"
                android:textColor="#000000"
                android:textSize="10dp"
                app:layout_constraintEnd_toEndOf="@+id/countryBadge"
                app:layout_constraintStart_toStartOf="@+id/countryBadge"
                app:layout_constraintTop_toBottomOf="@+id/countryBadge" />

            <TextView
                android:id="@+id/cityName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Paris"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_light"
                android:textColor="#000000"
                android:textSize="10dp"
                app:layout_constraintEnd_toEndOf="@+id/cityBadge"
                app:layout_constraintStart_toStartOf="@+id/cityBadge"
                app:layout_constraintTop_toBottomOf="@+id/cityBadge" />

            <TextView
                android:id="@+id/museumName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Musée du Louvre"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_light"
                android:textColor="#000000"
                android:textSize="10dp"
                app:layout_constraintEnd_toEndOf="@+id/museumBadge"
                app:layout_constraintStart_toStartOf="@+id/museumBadge"
                app:layout_constraintTop_toBottomOf="@+id/museumBadge" />

            <Button
                android:id="@+id/share_button"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_rounded_corner"
                style="?android:attr/borderlessButtonStyle"
                android:fontFamily="@font/poppins_semibold"
                android:text="Share"
                android:textSize="22dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cityName" />
            <Button
                android:id="@+id/post_button"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_rounded_corner"
                style="?android:attr/borderlessButtonStyle"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/Post"
                android:textSize="22dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cityName" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:elevation="2dp"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>