...
    <string name="log_out">Log Out</string>
    <string name="update_profile">Save</string>
    <string name="location">Location</string>
    <string name="like_count">Like Count</string>
    <string name="image_name">Image Name</string>
    <string name="Post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="spin">SPIN</string>
    <string name="stop">STOP</string>
    <string name="name_of_the_painting">Name of the painting</string>
    <string name="quizz_1">Quizz 1</string>
    <string name="start">Start</string>
    <string name="your_score_is">Your score is :</string>
...
