<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/title_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Events"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/title_events2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Events"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/events_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_events" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:onClick="goBack"
        app:layout_constraintBottom_toBottomOf="@+id/title_events"
        app:layout_constraintEnd_toStartOf="@+id/title_events"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_events"
        app:srcCompat="@drawable/back_button" />

    <Button
        android:id="@+id/sightseeing_button"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_button"
        android:text="Sightseeing"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/events_recycler_view"
        app:layout_constraintEnd_toStartOf="@+id/tournaments_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_events"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/tournaments_button"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_button_transparent"
        android:backgroundTint="@color/transparent"
        android:bottomLeftRadius="50dp"
        android:bottomRightRadius="50dp"
        android:text="Tournaments"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/colorPrimary"
        android:topLeftRadius="50dp"
        android:topRightRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/events_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_events"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/sightseeing_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
         />
</androidx.constraintlayout.widget.ConstraintLayout>
